Prevent chat from overflowing when messages are too long

--- a/src/renderer/pages/Chat/styles.css
+++ b/src/renderer/pages/Chat/styles.css
@@ -13,6 +13,7 @@
 .Chat_Page_Body_Left {
   display: flex;
   flex-direction: column;
+  flex: 0;
   height: 100%;
 }
 
@@ -20,6 +21,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
   height: 100%;
 }
 
